# python-sdk

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  LICENSE.md  README.md  example.ipynb  pyproject.toml  test.py
.github/workflows/: publish.yml  python.yml
.openapi-generator/: FILES
docs/: Embedding.md  Embeddings200Response.md  Embeddings200ResponseDataInner.md  Embeddings200ResponseUsage.md  EmbeddingsRequest.md  EmbeddingsRequestInput.md  EmbeddingsResponse.md  ErrorResponse.md  MixedbreadAiApi.md  ModelBaseResponse.md  ModelUsage.md
mixedbread_ai/: README.md  __init__.py  api_client.py  client.py  configuration.py  environment.py  exceptions.py  mixedbread_ai_client.py  rest.py
mixedbread_ai/api/: __init__.py  mixedbread_ai_api.py
mixedbread_ai/core/: client_wrapper.py
mixedbread_ai/errors/: __init__.py  forbidden_error.py  internal_server_error.py  unauthorized_error.py  unprocessable_entity_error.py
mixedbread_ai/mixedbread_ai_client/: __init__.py
mixedbread_ai/models/: __init__.py  embedding.py  embeddings200_response.py  embeddings200_response_data_inner.py  embeddings200_response_usage.py  embeddings_request.py  embeddings_request_input.py  embeddings_response.py  error_response.py  model_base_response.py  model_usage.py
mixedbread_ai/resources/: __init__.py
mixedbread_ai/types/: __init__.py  bad_request_error_body.py  data.py  embedding.py  embedding_item.py  embeddings_request_encoding_format.py  embeddings_response.py  embeddings_response_encoding_format.py  encoding_format.py  forbidden_error_body.py  input.py  internal_error.py  invalid_matryoshka_dimensions_error.py  invalid_matryoshka_model_error.py  model_not_found_error.py  query.py  (+23 more)
test/: test_embedding.py  test_embeddings200_response.py  test_embeddings200_response_data_inner.py  test_embeddings200_response_usage.py  test_embeddings_request.py  test_embeddings_request_input.py  test_embeddings_response.py  test_embeddings_response_usage.py  test_error_response.py  test_mixedbread_ai_api.py  test_model_base_response.py  test_model_usage.py
(+10 files in other folders)
