[tool.poetry]
name = "mixedbread-ai"
version = "2.2.4"
description = "mixedbread ai (https://www.mixedbread.ai)"
authors = ["mixedbread.ai <support@mixedbread.ai>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mixedbread-ai/python-sdk.git"
keywords = ["Embeddings", "NLP", "mixedbread.ai"]
packages = [
    { include = "mixedbread_ai" }
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
typing_extensions = ">= 4.0.0"
